--- a/render.yaml
+++ b/render.yaml
@@ -1,9 +1,10 @@
 services:
   - type: web
-    name: mysql-db
-    image: mysql:8.0
+    name: php-mysql-app
+    env: docker
+    plan: free
+    dockerfilePath: ./Dockerfile
+    dockerContext: .
     envVars:
-      - key: MYSQL_ROOT_PASSWORD
-        value: 1234
-      - key: MYSQL_DATABASE
-        value: sistema_web
+      - key: SERVICE_ROLE
+        value: web
