--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,23 +1,23 @@
 version: '3.8'
 
 services:
-  web:
-    build: .
-    ports:
-      - "80:80"
-    depends_on:
-      - db
-
-  db:
-    image: mysql:8.0
+  mysql:
+    image: mysql:8
+    container_name: mysql-local
     restart: always
     environment:
+      MYSQL_ROOT_PASSWORD: 1234
       MYSQL_DATABASE: sistema_web
-      MYSQL_USER: root
-      MYSQL_PASSWORD: 1234
-      MYSQL_ROOT_PASSWORD: rootpass
-    volumes:
-      - db_data:/var/lib/mysql
+    ports:
+      - "3306:3306"
 
-volumes:
-  db_data:
+  php:
+    build: .
+    ports:
+      - "8080:80"
+    volumes:
+      - ./src:/var/www/html
+    depends_on:
+      - mysql
+
+  
